Made hexagonal architecture test and fixed dependency issues